Cambios en el diseño y media queries

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -53,32 +53,28 @@ nav {
     background-color: #da291c !important;
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
-}
 
-nav i {
-    color: white;
-}
 
-.navbar-shadow {
-    box-shadow: 4px 4px 14px -6px rgba(0, 0, 0, 0.322);
-}
+    i {
+        color: white;
+    }
+    
+    .navbar-shadow {
+        box-shadow: 4px 4px 14px -6px rgba(0, 0, 0, 0.322);
+    }
 
-.navbar-logo {
-    height: 3.5rem;
-    margin: 0.2rem;
-}
+    .navbar-logo {
+        height: 3.5rem;
+        margin: 0.2rem;
+    }
 
-#navbarNav {
-    justify-content: end;
-}
+    #navbarNav {
+        justify-content: end;
+    }
 
-.menu {
-    gap: 1rem;
-    justify-content: center;
-}
-
-nav a:hover {
-    color: #dddddd !important;
+    nav a:hover {
+        color: #dddddd !important;
+    }
 }
 
 
