--- a/templates/ayuda.html
+++ b/templates/ayuda.html
@@ -4,23 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../style/scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../style/bootstrap/bootstrap.min.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-shadow navbar-dark">
+        <!-- Nav tabs -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <a href="../index.html"><img class="navbar-logo-solo" src="../img/connect-logo-solo.svg" alt=""></a>
+                <a href="../index.html"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,7 +45,7 @@
                             <a class="nav-link" href="../templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i
+                            <a class="nav-link m-0 nav-link-login" href="../templates/login.html">Iniciar Sesión <i
                                     class="bi bi-person"></i></a>
                         </li>
                     </ul>
@@ -48,89 +53,161 @@
             </div>
         </nav>
     </header>
+    <!---------------------------------->
+    <!------------- Navbar ------------->
+    <!---------------------------------->
+
     <main class="container">
         <div class="titulo">
             <h1>Centro de ayuda</h1>
         </div>
-        <h3>Preguntas frecuentes</h3>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button accordion-color" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        ¿Cuáles son los servicios que ofrece Connect?
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        En <strong>Connect</strong>, ofrecemos una amplia gama de servicios de telecomunicación y soluciones informáticas. Algunos de nuestros servicios incluyen cloud computing, servidores a medida, conectividad de alta velocidad, soluciones de respaldo y recuperación de datos, seguridad cibernética avanzada y soporte técnico especializado. Nuestra oferta está diseñada para satisfacer las necesidades de empresas de todos los tamaños y sectores, brindando soluciones personalizadas y confiables.
+        <div>
+            <div class="mb-3">
+                <h3>Preguntas frecuentes</h3>
+            </div>
+            <div class="accordion " id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            ¿Cuáles son los servicios que ofrece Connect?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            En <strong>Connect</strong>, ofrecemos una amplia gama de servicios de telecomunicación y
+                            soluciones informáticas. Algunos de nuestros servicios incluyen cloud computing, servidores a
+                            medida, conectividad de alta velocidad, soluciones de respaldo y recuperación de datos,
+                            seguridad cibernética avanzada y soporte técnico especializado. Nuestra oferta está diseñada
+                            para satisfacer las necesidades de empresas de todos los tamaños y sectores, brindando
+                            soluciones personalizadas y confiables.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            ¿Cuáles son los métodos de pago aceptados por Connect
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            En <strong>Connect</strong>, aceptamos varios métodos de pago para facilitar la contratación de nuestros
+                            servicios. Los métodos de pago aceptados incluyen tarjetas de crédito (Visa, Mastercard,
+                            American Express), transferencias bancarias y pagos electrónicos a través de plataformas de pago
+                            seguras. Trabajamos continuamente para brindarte opciones de pago flexibles y seguras que se
+                            adapten a tus necesidades.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            ¿Puedo cambiar o actualizar mis servicios una vez que los haya contratado?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Sí, en <strong>Connect</strong> te ofrecemos la posibilidad de cambiar o actualizar tus servicios una vez que los
+                            hayas contratado. Entendemos que las necesidades de tu negocio pueden cambiar con el tiempo, por
+                            lo que te brindamos la flexibilidad de ajustar tus servicios para adaptarse a nuevas demandas o
+                            crecimiento. Nuestro equipo de atención al cliente estará encantado de guiarte a través del
+                            proceso de actualización y asegurarse de que recibas la solución más adecuada para tus
+                            necesidades actuales.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                            ¿Cuál es el tiempo de respuesta promedio del equipo de soporte técnico?
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            En <strong>Connect</strong>, nos enorgullecemos de proporcionar un equipo de soporte técnico altamente capacitado
+                            y comprometido con la satisfacción de nuestros clientes. Nuestro tiempo de respuesta promedio es
+                            de 15 minutos para consultas y solicitudes técnicas. Nos esforzamos por resolver cualquier
+                            problema de manera rápida y eficiente, asegurándonos de que tus sistemas estén en funcionamiento
+                            óptimo en todo momento.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                            ¿Cómo puedo acceder a mi cuenta y realizar cambios en mis servicios contratados?
+                        </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            Para acceder a tu cuenta y realizar cambios en tus servicios contratados en Connect, simplemente
+                            inicia sesión en nuestra plataforma en línea. Una vez dentro, encontrarás un panel de control
+                            intuitivo desde donde podrás gestionar tus servicios, ver facturas, realizar pagos y realizar
+                            cualquier cambio que desees. Si necesitas ayuda o tienes alguna pregunta, nuestro equipo de
+                            soporte estará disponible para asistirte en cada paso del proceso.
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        ¿Cuáles son los métodos de pago aceptados por Connect
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        En Connect, aceptamos varios métodos de pago para facilitar la contratación de nuestros servicios. Los métodos de pago aceptados incluyen tarjetas de crédito (Visa, Mastercard, American Express), transferencias bancarias y pagos electrónicos a través de plataformas de pago seguras. Trabajamos continuamente para brindarte opciones de pago flexibles y seguras que se adapten a tus necesidades.
-                    </div>
+        </div>
+        <div class="text-center m-5">
+            <h3>¿No encontraste lo que buscabas?</h3>
+        </div>
+        <div class="container ayuda__contacto row justify-content-center">
+            <form class="contacto__formulario col-md-8 col-lg-5 col-xl-5">
+                <div class="mb-3">
+                    <h4>Dejanos un mensaje. Responderemos lo antes posible</h4>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Nombre</label>
+                    <input type="text" aria-label="First name" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Escribí tu consulta</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button>Enviar</button>
+            </form>
+            <div class="contacto__medios col-md-8 col-lg-6 col-xl-5">
+                <div class="atencion-cliente mb-4">
+                    <h3>Atención al cliente</h3>
+                    <p>Línea Buenos Aires: 11 1263-1456</p>
+                    <p>Línea resto del país: 0800-555-4466</p>
+                    <p>Email: atencion-cliente@connect.com</p>
+                </div>
+                <div class="servicio-tecnico">
+                    <h3>Servicio técnico</h3>
+                    <p>Línea Buenos Aires: 11 1223-9852</p>
+                    <p>Línea resto del país: 0800-555-8552</p>
+                    <p>Email: servicio-tecnico@connect.com</p>
+                </div>
                 </div>
             </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        ¿Puedo cambiar o actualizar mis servicios una vez que los haya contratado?
-                    </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Sí, en Connect te ofrecemos la posibilidad de cambiar o actualizar tus servicios una vez que los hayas contratado. Entendemos que las necesidades de tu negocio pueden cambiar con el tiempo, por lo que te brindamos la flexibilidad de ajustar tus servicios para adaptarse a nuevas demandas o crecimiento. Nuestro equipo de atención al cliente estará encantado de guiarte a través del proceso de actualización y asegurarse de que recibas la solución más adecuada para tus necesidades actuales.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingFour">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        ¿Cuál es el tiempo de respuesta promedio del equipo de soporte técnico?
-                    </button>
-                </h2>
-                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        En Connect, nos enorgullecemos de proporcionar un equipo de soporte técnico altamente capacitado y comprometido con la satisfacción de nuestros clientes. Nuestro tiempo de respuesta promedio es de 15 minutos para consultas y solicitudes técnicas. Nos esforzamos por resolver cualquier problema de manera rápida y eficiente, asegurándonos de que tus sistemas estén en funcionamiento óptimo en todo momento.
-                    </div>
-                </div>
-            </div><div class="accordion-item">
-                <h2 class="accordion-header" id="headingFive">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        ¿Cómo puedo acceder a mi cuenta y realizar cambios en mis servicios contratados?
-                    </button>
-                </h2>
-                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        Para acceder a tu cuenta y realizar cambios en tus servicios contratados en Connect, simplemente inicia sesión en nuestra plataforma en línea. Una vez dentro, encontrarás un panel de control intuitivo desde donde podrás gestionar tus servicios, ver facturas, realizar pagos y realizar cualquier cambio que desees. Si necesitas ayuda o tienes alguna pregunta, nuestro equipo de soporte estará disponible para asistirte en cada paso del proceso.
-                    </div>
-                </div>
-            </div>
-            
         </div>
     </main>
+
+    <!---------------------------------->
+    <!------------- Footer ------------->
+    <!---------------------------------->
 
     <footer>
         <div>
             <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
-            <p>Logo ©2023 - Todos los derechos reservados</p>
+            <p>Connect ©2023 - Todos los derechos reservados</p>
         </div>
         <div>
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
