--- a/templates/login.html
+++ b/templates/login.html
@@ -4,23 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../style/scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;600;700&display=swap"
+    rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../style/bootstrap/bootstrap.min.css">
     <title>Inicio</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-shadow navbar-dark">
+        <!-- Nav tabs -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a href="#"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
+                <a href="../index.html"><img class="navbar-logo-solo" src="../img/connect-logo-solo.svg" alt=""></a>
+                <a href="../index.html"><img class="navbar-logo" src="../img/logo-logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -40,7 +45,7 @@
                             <a class="nav-link" href="../templates/ayuda.html">Ayuda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../templates/login.html">Iniciar Sesión <i
+                            <a class="nav-link m-0 nav-link-login" href="../templates/login.html">Iniciar Sesión <i
                                     class="bi bi-person"></i></a>
                         </li>
                     </ul>
@@ -49,10 +54,16 @@
         </nav>
     </header>
 
-    <main class="row justify-content-center">
-        <div class="card__login m-5 col-xs-10 col-sm-8 col-lg-5 col-xl-3">
-            <img class="login__logo" src="../img/logo-logo.svg" alt="">
-            <form>
+    <!---------------------------------->
+    <!------------- Navbar ------------->
+    <!---------------------------------->
+    
+    <main class="container login">
+        <div class="card__login row">
+            <div class="col main-texto login_titulo_min_990">
+                <h2><strong>Conectate</strong> a la mejor red del país</h2>
+            </div>
+            <form class="col">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -61,19 +72,35 @@
                     <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-light">Registrarse</button>
-                    <button type="submit" class="btn btn-light">Iniciar Sesión</button>
+                <div class="forgot_password_user">
+                    <div class="forgot_user">
+                        <a href="">Olvidé mi usuario</a>
+                    </div>
+                    <div class="forgot_user">
+                        <a href="">Olvidé mi contraseña</a>
+                    </div>
+                </div>
+                <div class="button__card__login text-center disp">
+                    <button type="submit" class="btn btn-login">Iniciar Sesión</button>
+                    <button type="submit" class="btn btn-login">Registrarse</button>
                 </div>
             </form>
+            <div class="col main-texto login_titulo_max_990">
+                <h2><strong>Conectate</strong> a la mejor red del país</h2>
+            </div>
         </div>
 
         </div>
     </main>
+
+    <!---------------------------------->
+    <!------------- Footer ------------->
+    <!---------------------------------->
+
     <footer>
         <div>
             <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
-            <p>Logo ©2023 - Todos los derechos reservados</p>
+            <p>Connect ©2023 - Todos los derechos reservados</p>
         </div>
         <div>
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
