--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -100,85 +100,7 @@
         </div>
         <div>
             <h3 class="m-5 text-center">Nuestra Familia</h3>
-            <div class="cards__nosotros">
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person1.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Marcos Lee</h4>
-                        <p class="card__nosotros__cargo">Director Ejecutivo </p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci. Eius, saepe ad.</p>
-                    </div>
-                </div>
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person2.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Benjamin Roja</h4>
-                        <p class="card__nosotros__cargo">Director de Operaciones</p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci. Eius, saepe ad.</p>
-                    </div>
-
-                </div>
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person3.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Dimitri Boog</h4>
-                        <p class="card__nosotros__cargo">Director Financiero</p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci.</p>
-                    </div>
-
-                </div>
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person4.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Ema Sole</h4>
-                        <p class="card__nosotros__cargo">Directora de Marketing</p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci. Eius, saepe ad.</p>
-                    </div>
-
-                </div>
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person5.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Lisa Moon</h4>
-                        <p class="card__nosotros__cargo">Director de Ventas</p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci. Eius, saepe ad.</p>
-                    </div>
-
-                </div>
-                <div class="card__nosotros">
-                    <div class="card__content">
-                        <img class="card__nosotros__imagen" src="../img/nosotros/person6.jpg" alt="">
-                        <h4 class="card__nosotros__h4">Sophia Jhonson</h4>
-                        <p class="card__nosotros__cargo">Recursos Humanos</p>
-                        <p class="card__nosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Tempora
-                            velit aperiam nisi, magni officia sequi! Vitae, autem quas! Illo debitis numquam veritatis
-                            dicta
-                            rerum hic minima adipisci. Eius, saepe ad.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            
         <div>
             <div class="titulo">
                 <h2>¿Te interesa trabajar con nosotros?</h2>
@@ -213,14 +135,15 @@
     <!---------------------------------->
 
     <footer>
-        <div>
-            <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
-            <p>Connect ©2023 - Todos los derechos reservados</p>
-        </div>
-        <div>
+        <div class="redes">
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
+            <a href="" class="footer-redes"><i class="bi bi-linkedin"></i></a>
+        </div>
+        <div class="copy">
+            <p>Connect ©2023</p>
+            <p>Todos los derechos reservados</p>
         </div>
     </footer>
 
