--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -161,14 +161,15 @@
 
 
     <footer>
-        <div>
-            <img class="footer-logo" src="../img/logo-logo.svg" alt="logo">
-            <p>Connect ©2023 - Todos los derechos reservados</p>
-        </div>
-        <div>
+        <div class="redes">
             <a href="" class="footer-redes"><i class="bi bi-facebook"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-twitter"></i></a>
             <a href="" class="footer-redes"><i class="bi bi-instagram"></i></a>
+            <a href="" class="footer-redes"><i class="bi bi-linkedin"></i></a>
+        </div>
+        <div class="copy">
+            <p>Connect ©2023</p>
+            <p>Todos los derechos reservados</p>
         </div>
     </footer>
 
