--- a/style/scss/style.css
+++ b/style/scss/style.css
@@ -146,6 +146,7 @@ form button {
 
 .cards__servicios {
   gap: 1rem;
+  --bs-gutter-x: 0 !important;
 }
 .cards__servicios .card__servicios {
   border-radius: 7px;
@@ -158,6 +159,7 @@ form button {
 }
 .cards__servicios .card__servicios .card__items {
   display: grid;
+  padding-inline: 1rem !important;
   grid-template-columns: 1fr 1fr;
 }
 .cards__servicios .card__servicios .spotify {
@@ -280,17 +282,15 @@ form button {
 }
 
 @media screen and (max-width: 768px) {
-  .section_content {
+  .section .text-2 {
+    order: 2 !important;
+  }
+  .section .img-2 {
+    order: 1 !important;
+  }
+  .section .section_content {
     text-align: center !important;
     gap: 3rem;
-  }
-  .section_content .img-desktop {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .img-mobile {
-    display: none;
   }
 }
 @media (max-width: 500px) {
@@ -350,10 +350,14 @@ form button {
   footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
   footer p {
-    text-align: start;
+    text-align: right;
+  }
+}
+@media screen and (max-width: 768px) {
+  .redes {
+    margin-bottom: 0.4rem;
   }
 }
 @media screen and (max-width: 991px) {
